Update turing URL
... and added contact mail

--- a/templates/section.html
+++ b/templates/section.html
@@ -13,7 +13,7 @@
         <p>
             Pour les UEs d'INF*, un pont (non-officiel) vers turing a été
             mis en place à l'addresse
-            <a href="https://turing.polys-uga.edgarogh.fr/">https://turing.polys-uga.edgarogh.fr/</a>,
+            <a href="https://uga-turing.edgar.bzh/" target="_blank">https://uga-turing.edgar.bzh/</a>,
             et permet d'accéder à turing depuis un navigateur web, sans
             installer quoi que ce soit sur votre ordinateur.
         </p>
@@ -35,6 +35,10 @@
                 est possible de mettre en oeuvre pour pas qu'il n'y ait de
                 problème.s (connection sécurisée par HTTPS par exemple).
             </i>
+        </p>
+        <p>
+            Nous vous invitons à envoyer tous problème·s et/ou remarque·s à 
+            <a href="mailto:Edgar.Onghena@etu.univ-grenoble-alpes.fr" target="_blank">Edgar.Onghena@etu.univ-grenoble-alpes.fr</a>.
         </p>
     </div>
 
