Improve footer, and more generally the style of the website

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,5 +19,13 @@
         {% endfor %}
 
         {% block content %}{% endblock content %}
+        <footer>
+            <img src="/wp.png" alt="Logo de la WartaPoirier Corp.">
+                <p>
+                    Ce moment de praticité qualitatif vous est offert par <b><a href="https://wp-corp.eu.org">la WartaPoirier Corp</a></b>.
+                    Nous vous remercions d'utiliser cette nouvelle offre qui permet de consulter
+                    vos cours de manière disruptive.
+                </p>
+        </footer>
     </body>
 </html>
