--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,8 @@
 body {
     font-family: sans-serif;
     padding: 1em 25vw;
+    color: #22031F;
+    font-family: "Segoe UI", "Open Sans", "San Francisco", "Roboto", "Helvetica Neue", "Helvetica", "Ubuntu", sans-serif;
 }
 
 @media screen and (max-width: 720px) {
@@ -9,28 +11,34 @@ body {
     }
 }
 
-a[href$="/code.ml"] {
-    font-family: monospace;
+h1, h2, h3, h4 {
+    font-family: "Libre Baskerville", "Playfair Display", "Noto Serif", "Lora",  "Merriweather", "Times New Roman", serif;
 }
 
-* {
-    box-sizing: border-box;
-  }
-  
-  .column {
-    float: left;
-    width: 10%;
-    padding: 5px;
-  }
+h2 {
+    margin-top: 3em;
+}
 
-  .column2 {
-    float: left;
-    width: 90%;
-    padding: 5px;
-  }
+a, a:visited {
+    color: #457B9D;
+}
 
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
+.info {
+    border: 1px solid #22031F;
+    margin: 3em 1em 1em 1em;
+    padding: 1em;
+    border-radius: 1em;
+}
+
+body > footer {
+    display: flex;
+    margin: 10em 0 2em;
+    font-style: italic;
+    color: #222222;
+
+    img {
+      max-width: 5em;
+      margin-right: 2em;
+      border-radius: 1em;
+    }
+}
