--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,12 @@
                 <p>
                     Ce moment de praticité qualitatif vous est offert par <b><a href="https://wp-corp.eu.org">la WartaPoirier Corp</a></b>.
                     Nous vous remercions d'utiliser cette nouvelle offre qui permet de consulter
-                    vos cours de manière disruptive.
+                    vos cours de manière disruptive. Le contenu de ce site est sous licence GPL-3.0,
+                    mais les copies des documents que nous distribuons ne sont pas concernées par
+                    cette licence et son la propriété de leurs auteurices respecti⋅f⋅ve⋅s. Si vous
+                    êtes à l'origine d'un des fichiers présent sur ce site et que vous voudriez
+                    que nous le retirions, <a href="https://github.com/WartaPoirier-corp/cours-min/issues/new">merci d'ouvrir
+                    un ticket</a>.
                 </p>
         </footer>
     </body>
