Make TOC more explicit
(someone thought it was just links for the PDFs)

--- a/templates/section.html
+++ b/templates/section.html
@@ -8,6 +8,7 @@
     <h1>{{ section.title }}</h1>
     <p>{{ section.content | safe }}</p>
 
+    <h3>Table des matières</h3>
     <ul class="toc">
     {% for ue in section.subsections %}
         {% set ue = get_section(path=ue) %}
